<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_drawer_all"
        android:icon="@drawable/ic_tag"
        android:title="@string/list_title" />
    <item
        android:id="@+id/menu_drawer_red"
        android:icon="@drawable/ic_tag"
        android:title="@string/tag_red" />
    <item
        android:id="@+id/menu_drawer_orange"
        android:icon="@drawable/ic_tag"
        android:title="@string/tag_orange" />
    <item
        android:id="@+id/menu_drawer_yellow"
        android:icon="@drawable/ic_tag"
        android:title="@string/tag_yellow" />
    <item
        android:id="@+id/menu_drawer_green"
        android:icon="@drawable/ic_tag"
        android:title="@string/tag_green" />
    <item
        android:id="@+id/menu_drawer_light_blue"
        android:icon="@drawable/ic_tag"
        android:title="@string/tag_light_blue" />
    <item
        android:id="@+id/menu_drawer_blue"
        android:icon="@drawable/ic_tag"
        android:title="@string/tag_blue" />
    <item
        android:id="@+id/menu_drawer_purple"
        android:icon="@drawable/ic_tag"
        android:title="@string/tag_purple" />
    <item
        android:id="@+id/menu_drawer_black"
        android:icon="@drawable/ic_tag"
        android:title="@string/tag_black" />
</menu>